--- a/BNTA/react/myprofile/my-app/src/index.css
+++ b/BNTA/react/myprofile/my-app/src/index.css
@@ -1,22 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  text-align: center;
-  overflow-x: hidden;
-}
+@import "antd/dist/antd.css";
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
