Transformed to bootstrap, finished header

--- a/BNTA/react/myprofile/my-app/src/divider/divider.css
+++ b/BNTA/react/myprofile/my-app/src/divider/divider.css
@@ -1,6 +1,6 @@
 svg {
-  margin: 5em 0 5em 0;
-  padding: 5em 0 5em 0;
+  /* margin: 5em 0 5em 0;
+  padding: 5em 0 5em 0; */
   width: 100px;
   height: 100px;
 }
