--- a/BNTA/react/myprofile/my-app/src/header/header.css
+++ b/BNTA/react/myprofile/my-app/src/header/header.css
@@ -1,18 +1,14 @@
-.header-background {
+header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
   text-align: center;
+  padding: 8rem;
 }
 
 h2 {
+  padding: 0 0;
+  margin: 0.2em 0 0.2em;
   font-family: "Roboto", sans-serif;
-  font-size: 2em;
+  font-size: 4vw;
   color: #989898;
 }
 
@@ -29,67 +25,13 @@ h1 {
 h3 {
   margin: 0.2em 0 0.2em;
   font-family: "Roboto", sans-serif;
-  font-size: 1.5em;
+  font-size: 3vw;
   color: #fff;
 }
 
-.typewriter {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid #33ff33; /* The typwriter cursor */
-  opacity: 80%;
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 1em auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0.15em; /* Adjust as needed */
-  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: #fff;
-  }
-}
-
-.round_pic {
+.avatar {
+  vertical-align: middle;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
-}
-
-hr {
-  display: block;
-  margin: 0.5em 0.5em;
-  overflow: hidden;
-  border-width: 1px;
-}
-
-.glow {
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
-}
-
-@keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073,
-      0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6,
-      0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
 }
