--- a/BNTA/react/myprofile/my-app/src/divider/divider.css
+++ b/BNTA/react/myprofile/my-app/src/divider/divider.css
@@ -1,3 +1,28 @@
+.blink {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  10% {
+    opacity: 0.9;
+  }
+  30% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  80% {
+    opacity: 0.3;
+  }
+}
+
+.divider-style {
+  justify-content: center;
+  left: 50%;
+  right: 50%;
+}
+
 svg {
   /* margin: 5em 0 5em 0;
   padding: 5em 0 5em 0; */
