--- a/BNTA/react/myprofile/my-app/src/nav/nav.css
+++ b/BNTA/react/myprofile/my-app/src/nav/nav.css
@@ -1,3 +1,18 @@
+.navbar-custom {
+  background-color: #8d8782;
+}
+
+.navbar-custom a.navbar-brand {
+  color: #555;
+}
+.navbar-custom li a {
+  color: #41413f;
+}
+
+.navbar-custom li a:hover {
+  color: #8d8782;
+}
+
 #mySidenav a:hover {
   left: 0;
   background-color: #ddd;
