--- a/BNTA/react/myprofile/my-app/src/header/header.css
+++ b/BNTA/react/myprofile/my-app/src/header/header.css
@@ -4,6 +4,10 @@ header {
   padding: 4rem;
 }
 
+header {
+  padding: 8em;
+}
+
 h2 {
   padding: 0 0;
   margin: 0.2em 0 0.2em;
@@ -12,26 +16,48 @@ h2 {
   color: #989898;
 }
 
-h1 {
+header h1 {
   padding: 0 0;
   margin: 0.2em 0 0.2em;
-  font-size: 8vw;
-  font-weight: 900;
+  font-size: 4vw;
+  font-family: "Courier New";
   opacity: 0.8;
   color: #fff;
   display: block;
 }
 
 h3 {
-  margin: 0.2em 0 0.2em;
+  margin: 1em;
   font-family: "Roboto", sans-serif;
-  font-size: 3vw;
-  color: #fff;
+  font-size: 2vw;
+  color: #808080;
 }
 
 .avatar {
   vertical-align: middle;
-  width: 100px;
-  height: 100px;
+  width: 15vw;
   border-radius: 50%;
+}
+
+.fa {
+  padding: 2rem 4rem 2rem 2rem;
+  font-size: 3rem;
+  width: 2rem;
+  text-align: center;
+  text-decoration: none;
+  margin: 1rem 0.2rem;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-github {
+  background: #fff;
+  color: #000;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: #fff;
 }
