--- a/src/header/header.css
+++ b/src/header/header.css
@@ -8,7 +8,7 @@ header {
   padding: 8em;
 }
 
-h2 {
+header h2 {
   padding: 0 0;
   margin: 0.2em 0 0.2em;
   font-family: "Roboto", sans-serif;
@@ -26,7 +26,7 @@ header h1 {
   display: block;
 }
 
-h3 {
+header h3 {
   margin: 1em;
   font-family: "Roboto", sans-serif;
   font-size: 2vw;
