--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1 {
+  font-weight: 500;
+  text-align: center;
+  line-height: 40px;
+  font-size: 4vw;
+  color: #555;
+  text-align: center;
+  padding:2rem;
+}
