--- a/src/project/project.css
+++ b/src/project/project.css
@@ -3,14 +3,6 @@
   padding: 10rem;
 }
 
-#projects h1 {
-  font-weight: 500;
-  text-align: center;
-  line-height: 40px;
-  font-size: 4vw;
-  color: #000;
-}
-
 .button {
   font-size: 1.2rem;
   border: solid 0.1rem #e8e8e8;
@@ -52,6 +44,10 @@
   height: calc(100% - 16px) !important;
 }
 
+.vertical-timeline{
+  overflow:auto;
+}
+
 .vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 10px 35px;
@@ -65,6 +61,7 @@
   margin: 1rem;
   height: 20rem;
   border-radius: 4px;
+  float:center;
 }
 
 .vertical-timeline-element-date-custom {
