--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ h1 {
   text-align: center;
   line-height: 40px;
   font-size: 4vw;
-  color: #555;
+  /* color: #555; */
   text-align: center;
   padding: 2rem;
 }
